--- a/src/client/app/templates/application.hbs
+++ b/src/client/app/templates/application.hbs
@@ -1,3 +1,54 @@
-<h2 id="title">Welcome to Ember</h2>
+<div class="container">
 
-{{outlet}}
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        {{#link-to "index" class="navbar-brand"}}Mekspaaf{{/link-to}}
+      </div>
+
+      <div class="collapse navbar-collapse" id="main-navbar">
+        <ul class="nav navbar-nav">
+          {{#nav-link-to "index"}}Home{{/nav-link-to}}
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Direct APIs<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li class="ember-view">
+                <a href="/api/me">/api/me</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+
+        <ul class="nav navbar-nav navbar-right">
+          <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Session<span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              {{#nav-link-to "me"}}About Me{{/nav-link-to}}
+              <li class="ember-view">
+                <a href="/.auth/login/aad?post_login_redirect_url=/">Refresh Login</a>
+              </li>
+              <li class="ember-view">
+                <a href="/api/logout">Application Logout</a>
+              </li>
+              <li class="ember-view">
+                <a href="/.auth/logout?post_logout_redirect_uri=https://dev.azure.com/">SSO Logout</a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  {{outlet}}
+</div>
