--- a/src/client/app/templates/application.hbs
+++ b/src/client/app/templates/application.hbs
@@ -15,6 +15,7 @@
       <div class="collapse navbar-collapse" id="main-navbar">
         <ul class="nav navbar-nav">
           {{#nav-link-to "index"}}Home{{/nav-link-to}}
+          {{#nav-link-to "me"}}About Me{{/nav-link-to}}
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               Direct APIs<span class="caret"></span>
